[package]
name = "dbgquirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/catornot/egui.git", default-features = false, features = ["wgpu","default_fonts"] }
egui-winit = "0.20.1"
parking_lot = "0.12.1"
retour = { version = "0.3.1", features = ["static-detour"] }
rrplug = { git = "https://github.com/R2NorthstarTools/rrplug.git", version = "4.0.0" }

[lib]
crate-type = ["cdylib"]
